[gd_scene load_steps=55 format=2]

[ext_resource path="res://Kleiderschrank.gd" type="Script" id=1]
[ext_resource path="res://Tops.gd" type="Script" id=2]
[ext_resource path="res://assets/2x/top_blue.png" type="Texture" id=3]
[ext_resource path="res://assets/2x/tops/blue/pullover.png" type="Texture" id=4]
[ext_resource path="res://assets/2x/tops/blue/dress_1.png" type="Texture" id=5]
[ext_resource path="res://assets/2x/tops/blue/top.png" type="Texture" id=6]
[ext_resource path="res://assets/2x/tops/blue/pants.png" type="Texture" id=7]
[ext_resource path="res://assets/2x/tops/blue/shorts.png" type="Texture" id=8]
[ext_resource path="res://assets/2x/tops/blue/dress_2.png" type="Texture" id=9]
[ext_resource path="res://assets/2x/tops/blue/dress_3.png" type="Texture" id=10]
[ext_resource path="res://assets/2x/top_orange.png" type="Texture" id=11]
[ext_resource path="res://assets/2x/tops/orange/pullover_orange.png" type="Texture" id=12]
[ext_resource path="res://assets/2x/tops/orange/dress_2_1_orange.png" type="Texture" id=13]
[ext_resource path="res://assets/2x/tops/orange/ttop_orange.png" type="Texture" id=14]
[ext_resource path="res://assets/2x/tops/orange/pants_orange.png" type="Texture" id=15]
[ext_resource path="res://assets/2x/tops/orange/shorts_orange.png" type="Texture" id=16]
[ext_resource path="res://assets/2x/tops/orange/dress_1_orange.png" type="Texture" id=17]
[ext_resource path="res://assets/2x/tops/orange/dress_3_orange.png" type="Texture" id=18]
[ext_resource path="res://assets/2x/top_green.png" type="Texture" id=19]
[ext_resource path="res://assets/2x/tops/green/pullover_1_green.png" type="Texture" id=20]
[ext_resource path="res://assets/2x/tops/green/dress_2_green.png" type="Texture" id=21]
[ext_resource path="res://assets/2x/tops/green/ttop_1_green.png" type="Texture" id=22]
[ext_resource path="res://assets/2x/tops/green/pants_1_green.png" type="Texture" id=23]
[ext_resource path="res://assets/2x/tops/green/shorts_1_green.png" type="Texture" id=24]
[ext_resource path="res://assets/2x/tops/green/dress_1_1_green.png" type="Texture" id=25]
[ext_resource path="res://assets/2x/tops/green/dress_3_1_green.png" type="Texture" id=26]
[ext_resource path="res://assets/2x/top_red.png" type="Texture" id=27]
[ext_resource path="res://assets/2x/tops/red/pullover_2_red.png" type="Texture" id=28]
[ext_resource path="res://assets/2x/tops/red/dress_2_2_red.png" type="Texture" id=29]
[ext_resource path="res://assets/2x/tops/red/ttop_2_red.png" type="Texture" id=30]
[ext_resource path="res://assets/2x/tops/red/pants_2_red.png" type="Texture" id=31]
[ext_resource path="res://assets/2x/tops/red/shorts_2_red.png" type="Texture" id=32]
[ext_resource path="res://assets/2x/tops/red/dress_1_2_red.png" type="Texture" id=33]
[ext_resource path="res://assets/2x/tops/red/dress_3_2_red.png" type="Texture" id=34]
[ext_resource path="res://assets/2x/top_pink.png" type="Texture" id=35]
[ext_resource path="res://assets/2x/tops/pink/pullover_3_pink.png" type="Texture" id=36]
[ext_resource path="res://assets/2x/tops/pink/dress_2_3_pink.png" type="Texture" id=37]
[ext_resource path="res://assets/2x/tops/pink/ttop_3_pink.png" type="Texture" id=38]
[ext_resource path="res://assets/2x/tops/pink/pants_3_pink.png" type="Texture" id=39]
[ext_resource path="res://assets/2x/tops/pink/shorts_3_pink.png" type="Texture" id=40]
[ext_resource path="res://assets/2x/tops/pink/dress_1_3_pink.png" type="Texture" id=41]
[ext_resource path="res://assets/2x/tops/pink/dress_3_3_pink.png" type="Texture" id=42]
[ext_resource path="res://Shoes.gd" type="Script" id=43]
[ext_resource path="res://assets/2x/shoes_4.png" type="Texture" id=44]
[ext_resource path="res://assets/2x/tops/blue/btn_shoes_blue.png" type="Texture" id=45]
[ext_resource path="res://assets/2x/tops/orange/btn_shoes_orange.png" type="Texture" id=46]
[ext_resource path="res://assets/2x/tops/red/btn_shoes_red.png" type="Texture" id=47]
[ext_resource path="res://assets/2x/tops/green/btn_shoes_green.png" type="Texture" id=48]
[ext_resource path="res://assets/2x/tops/pink/btn_shoes_pink.png" type="Texture" id=49]
[ext_resource path="res://assets/2x/btn_back.png" type="Texture" id=50]
[ext_resource path="res://assets/2x/btn_color.png" type="Texture" id=51]
[ext_resource path="res://assets/2x/bg_schrank.png" type="Texture" id=52]
[ext_resource path="res://assets/2x/btn_kleider.png" type="Texture" id=53]
[ext_resource path="res://assets/2x/btn_schuhe.png" type="Texture" id=54]

[node name="Wardrobe" type="Node2D"]
script = ExtResource( 1 )

[node name="Categories" type="Node2D" parent="."]

[node name="Tops" type="Node2D" parent="Categories"]
script = ExtResource( 2 )
isPaginated = true

[node name="Blue" type="TextureRect" parent="Categories/Tops"]
editor/display_folded = true
visible = false
margin_left = 504.0
margin_right = 1545.0
margin_bottom = 1536.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pullover" type="TextureButton" parent="Categories/Tops/Blue"]
margin_left = 378.752
margin_top = 747.314
margin_right = 813.752
margin_bottom = 1089.31
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress1" type="TextureButton" parent="Categories/Tops/Blue"]
margin_left = 699.687
margin_top = 675.615
margin_right = 1056.69
margin_bottom = 1207.62
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="TextureButton" parent="Categories/Tops/Blue"]
margin_left = 440.208
margin_top = 1017.04
margin_right = 677.208
margin_bottom = 1362.04
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pants" type="TextureButton" parent="Categories/Tops/Blue"]
margin_left = 150.0
margin_top = 1099.03
margin_right = 410.0
margin_bottom = 1529.03
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shorts" type="TextureButton" parent="Categories/Tops/Blue"]
margin_left = 433.379
margin_top = 1259.44
margin_right = 697.379
margin_bottom = 1497.44
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress2" type="TextureButton" parent="Categories/Tops/Blue"]
margin_left = 151.829
margin_top = 675.068
margin_right = 419.829
margin_bottom = 1239.07
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress3" type="TextureButton" parent="Categories/Tops/Blue"]
margin_left = 699.687
margin_top = 1044.35
margin_right = 1057.69
margin_bottom = 1667.35
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Orange" type="TextureRect" parent="Categories/Tops"]
editor/display_folded = true
visible = false
margin_left = 504.0
margin_right = 1545.0
margin_bottom = 1536.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pullover" type="TextureButton" parent="Categories/Tops/Orange"]
margin_left = 378.752
margin_top = 747.314
margin_right = 813.752
margin_bottom = 1089.31
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress1" type="TextureButton" parent="Categories/Tops/Orange"]
margin_left = 699.687
margin_top = 675.615
margin_right = 1056.69
margin_bottom = 1207.62
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="TextureButton" parent="Categories/Tops/Orange"]
margin_left = 440.208
margin_top = 1017.04
margin_right = 677.208
margin_bottom = 1362.04
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pants" type="TextureButton" parent="Categories/Tops/Orange"]
margin_left = 150.0
margin_top = 1099.03
margin_right = 410.0
margin_bottom = 1529.03
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shorts" type="TextureButton" parent="Categories/Tops/Orange"]
margin_left = 433.379
margin_top = 1259.44
margin_right = 697.379
margin_bottom = 1497.44
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress2" type="TextureButton" parent="Categories/Tops/Orange"]
margin_left = 151.829
margin_top = 675.068
margin_right = 419.829
margin_bottom = 1239.07
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress3" type="TextureButton" parent="Categories/Tops/Orange"]
margin_left = 699.687
margin_top = 1044.35
margin_right = 1057.69
margin_bottom = 1667.35
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="Green" type="TextureRect" parent="Categories/Tops"]
editor/display_folded = true
visible = false
margin_left = 504.0
margin_right = 1545.0
margin_bottom = 1536.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pullover" type="TextureButton" parent="Categories/Tops/Green"]
margin_left = 378.752
margin_top = 747.314
margin_right = 813.752
margin_bottom = 1089.31
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress1" type="TextureButton" parent="Categories/Tops/Green"]
margin_left = 699.687
margin_top = 675.615
margin_right = 1056.69
margin_bottom = 1207.62
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 21 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="TextureButton" parent="Categories/Tops/Green"]
margin_left = 440.208
margin_top = 1017.04
margin_right = 677.208
margin_bottom = 1362.04
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pants" type="TextureButton" parent="Categories/Tops/Green"]
margin_left = 150.0
margin_top = 1099.03
margin_right = 410.0
margin_bottom = 1529.03
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 23 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shorts" type="TextureButton" parent="Categories/Tops/Green"]
margin_left = 433.379
margin_top = 1259.44
margin_right = 697.379
margin_bottom = 1497.44
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 24 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress2" type="TextureButton" parent="Categories/Tops/Green"]
margin_left = 151.829
margin_top = 675.068
margin_right = 419.829
margin_bottom = 1239.07
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 25 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress3" type="TextureButton" parent="Categories/Tops/Green"]
margin_left = 699.687
margin_top = 1044.35
margin_right = 1057.69
margin_bottom = 1667.35
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 26 )
__meta__ = {
"_edit_lock_": true
}

[node name="Red" type="TextureRect" parent="Categories/Tops"]
editor/display_folded = true
visible = false
margin_left = 504.0
margin_right = 1545.0
margin_bottom = 1536.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 27 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pullover" type="TextureButton" parent="Categories/Tops/Red"]
margin_left = 378.752
margin_top = 747.314
margin_right = 813.752
margin_bottom = 1089.31
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 28 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress1" type="TextureButton" parent="Categories/Tops/Red"]
margin_left = 699.687
margin_top = 675.615
margin_right = 1056.69
margin_bottom = 1207.62
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="TextureButton" parent="Categories/Tops/Red"]
margin_left = 440.208
margin_top = 1017.04
margin_right = 677.208
margin_bottom = 1362.04
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pants" type="TextureButton" parent="Categories/Tops/Red"]
margin_left = 150.0
margin_top = 1099.03
margin_right = 410.0
margin_bottom = 1529.03
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shorts" type="TextureButton" parent="Categories/Tops/Red"]
margin_left = 433.379
margin_top = 1259.44
margin_right = 697.379
margin_bottom = 1497.44
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress2" type="TextureButton" parent="Categories/Tops/Red"]
margin_left = 151.829
margin_top = 675.068
margin_right = 419.829
margin_bottom = 1239.07
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 33 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress3" type="TextureButton" parent="Categories/Tops/Red"]
margin_left = 699.687
margin_top = 1044.35
margin_right = 1057.69
margin_bottom = 1667.35
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 34 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pink" type="TextureRect" parent="Categories/Tops"]
editor/display_folded = true
visible = false
margin_left = 504.0
margin_right = 1545.0
margin_bottom = 1536.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 35 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pullover" type="TextureButton" parent="Categories/Tops/Pink"]
margin_left = 378.752
margin_top = 747.314
margin_right = 813.752
margin_bottom = 1089.31
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 36 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress1" type="TextureButton" parent="Categories/Tops/Pink"]
margin_left = 699.687
margin_top = 675.615
margin_right = 1056.69
margin_bottom = 1207.62
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 37 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="TextureButton" parent="Categories/Tops/Pink"]
margin_left = 440.208
margin_top = 1017.04
margin_right = 677.208
margin_bottom = 1362.04
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 38 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pants" type="TextureButton" parent="Categories/Tops/Pink"]
margin_left = 150.0
margin_top = 1099.03
margin_right = 410.0
margin_bottom = 1529.03
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 39 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shorts" type="TextureButton" parent="Categories/Tops/Pink"]
margin_left = 433.379
margin_top = 1259.44
margin_right = 697.379
margin_bottom = 1497.44
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 40 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress2" type="TextureButton" parent="Categories/Tops/Pink"]
margin_left = 151.829
margin_top = 675.068
margin_right = 419.829
margin_bottom = 1239.07
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 41 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dress3" type="TextureButton" parent="Categories/Tops/Pink"]
margin_left = 699.687
margin_top = 1044.35
margin_right = 1057.69
margin_bottom = 1667.35
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 42 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shoes" type="Node2D" parent="Categories"]
script = ExtResource( 43 )

[node name="Background" type="TextureRect" parent="Categories/Shoes"]
margin_left = 504.0
margin_right = 1545.0
margin_bottom = 1536.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 44 )
__meta__ = {
"_edit_lock_": true
}

[node name="Blue" type="TextureButton" parent="Categories/Shoes/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = -48.0
margin_right = 265.0
margin_bottom = 54.0
texture_normal = ExtResource( 45 )

[node name="Orange" type="TextureButton" parent="Categories/Shoes/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = 92.0
margin_right = 265.0
margin_bottom = 194.0
texture_normal = ExtResource( 46 )

[node name="Red" type="TextureButton" parent="Categories/Shoes/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = 249.037
margin_right = 265.0
margin_bottom = 351.037
texture_normal = ExtResource( 47 )

[node name="Green" type="TextureButton" parent="Categories/Shoes/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = 392.0
margin_right = 265.0
margin_bottom = 494.0
texture_normal = ExtResource( 48 )

[node name="Pink" type="TextureButton" parent="Categories/Shoes/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = 540.0
margin_right = 265.0
margin_bottom = 642.0
texture_normal = ExtResource( 49 )

[node name="ContextualButtons" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonBack" type="TextureButton" parent="ContextualButtons"]
visible = false
margin_left = 372.0
margin_top = 30.0
margin_right = 601.0
margin_bottom = 253.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 50 )
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonColor" type="TextureButton" parent="ContextualButtons"]
visible = false
margin_left = 372.0
margin_top = 160.0
margin_right = 601.0
margin_bottom = 384.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 51 )
__meta__ = {
"_edit_lock_": true
}

[node name="CategorySelection" type="TextureRect" parent="."]
margin_left = 1050.0
margin_right = 2091.0
margin_bottom = 1536.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 52 )
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonTops" type="Button" parent="CategorySelection"]
margin_left = 273.0
margin_top = 820.0
margin_right = 767.0
margin_bottom = 1308.0
icon = ExtResource( 53 )
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonShoes" type="Button" parent="CategorySelection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = -548.0
margin_right = 247.0
margin_bottom = -60.0
icon = ExtResource( 54 )
flat = true
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="ContextualButtons/ButtonBack" to="." method="_on_Button_Back_pressed"]
[connection signal="pressed" from="ContextualButtons/ButtonColor" to="." method="_on_ButtonColor_pressed"]
[connection signal="pressed" from="CategorySelection/ButtonTops" to="." method="openWardrobe" binds= [ "Tops" ]]
[connection signal="pressed" from="CategorySelection/ButtonShoes" to="." method="openWardrobe" binds= [ "Shoes" ]]
